# unnamed-voxel-engine

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
libs/: glad.c
src/: main.cpp  precomp.h
src/app/: app.cpp  app.h
src/camera/: camera.cpp  camera.h
src/libs-init/: glfw-init.cpp  glfw-init.h
src/ray/: ray.cpp  ray.h
src/window/: window.cpp  window.h
